kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecms
  labels:
    app.kubernetes.io/name: ecms
